--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
+    "@mui/x-data-grid-premium": "^6.0.0",
+    "@mui/x-data-grid-pro": "^6.0.0",
     "@react-hook/debounce": "^4.0.0",
+    "@react-pdf/renderer": "^3.1.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,13 +21,16 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "@types/react-pdf": "^6.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@types/url-join": "^4.0.1",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "create-react-component-folder": "^0.3.7",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "global": "^4.4.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
