--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.38",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "@types/react-pdf": "^6.2.0",
@@ -31,9 +32,13 @@
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
     "global": "^4.4.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.3",
+    "papaparse": "^5.4.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
+    "react-data-export": "^0.6.0",
     "react-dom": "^18.1.0",
     "react-iframe": "^1.8.0",
     "react-moment": "^1.1.2",
